--- a/estilo.css
+++ b/estilo.css
@@ -20,6 +20,14 @@ body {
 	cursor: pointer;
 	color: var(--cor-quadrado-default);
 	vertical-align: middle;
+	border-radius: 8px;
+}
+
+h1{
+	background-color: rgb(232, 232, 232);
+	width: 380px;
+	margin: 20px auto;
+	padding: 12px;
 }
 
 .jogador,
